# my-little-investigations

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  MLI.pro  MyLittleInvestigations.cbp  MyLittleInvestigationsLauncher.cbp  MyLittleInvestigationsUpdater.cbp  README.md  UpdaterHelper.cbp
cmake/: FindCURL.cmake  FindFFMPEG.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
fr/: LocalizableContent.xml  case.xml
linux/: MyLittleInvestigations.desktop
osx/: ApplicationSupportBridge.cpp  ApplicationSupportBridge.h  NSFileManagerDirectoryLocations.h  NSFileManagerDirectoryLocations.m  OSXMain.mm  SDLMain.m  SDLMain.mm
osx/AppFileStaging/Contents/: Info.plist
osx/AppFileStaging/Contents/Resources/: AppIcon.icns  LockIcon.icns  MyLittleInvestigations.plist
src/: Animation.cpp  Animation.h  AnimationSound.cpp  AnimationSound.h  AutoSemaphore.h  Cache.h  Collisions.cpp  Collisions.h  Color.cpp  Color.h  Condition.cpp  Condition.h  EasingFunctions.cpp  EasingFunctions.h  FileFunctions.cpp  FileFunctions.cpp.orig  FileFunctions.h  Font.cpp  Font.h  Game.cpp  Game.h  HeightMap.cpp  HeightMap.h  Image.cpp  Image.h  Interfaces.cpp  Interfaces.h  KeyboardHelper.cpp  KeyboardHelper.h  Line.cpp  Line.h  LocalizableContent.cpp  LocalizableContent.h  MLIException.cpp  MLIException.h  MLIFont.cpp  MLIFont.h  MouseHelper.cpp  MouseHelper.h  Polygon.cpp  (+42 more)
src/CaseContent/: Area.cpp  Area.h  Conversation.cpp  Conversation.cpp.orig  Conversation.h  Crowd.cpp  Crowd.h  Dialog.cpp  Dialog.h  Encounter.cpp  Encounter.h  FieldCharacter.cpp  FieldCharacter.h  FieldCutscene.cpp  FieldCutscene.h  ForegroundElement.cpp  ForegroundElement.h  Location.cpp  Location.h  Notification.cpp  Notification.h  ZoomedView.cpp  ZoomedView.h
src/CaseCreator/: main.cpp
src/CaseCreator/CaseContent/: Animation.cpp  Animation.h  BackgroundMusic.cpp  BackgroundMusic.h  CaseContent.cpp  CaseContent.h  Character.cpp  Character.h  Condition.cpp  Condition.h  Conversation.cpp  Conversation.h  Encounter.cpp  Encounter.h  Evidence.cpp  Evidence.h  FieldCutscene.cpp  FieldCutscene.h  Flag.cpp  Flag.h  ForegroundElement.cpp  ForegroundElement.h  HitBox.cpp  HitBox.h  InteractionLocation.cpp  InteractionLocation.h  Location.cpp  Location.h  ManipulatableGraphicsScene.cpp  SoundEffect.cpp  SoundEffect.h  ZoomedView.cpp  ZoomedView.h
src/CaseCreator/CaseContent/Staging/: Animation.Staging.cpp  Animation.Staging.h  CaseContentLoader.cpp  CaseContentLoader.h  CaseContentLoaderProgressDialog.cpp  CaseContentLoaderProgressDialog.h  CaseContentLoadingStager.cpp  CaseContentLoadingStager.h  Condition.Staging.cpp  Condition.Staging.h  Conversation.Staging.cpp  Conversation.Staging.h  Crowd.Staging.cpp  Crowd.Staging.h  DialogCharacter.Staging.cpp  DialogCharacter.Staging.h  DialogCutscene.Staging.cpp  DialogCutscene.Staging.h  Encounter.Staging.cpp  Encounter.Staging.h  Enums.Staging.cpp  Enums.Staging.h  Evidence.Staging.cpp  Evidence.Staging.h  FieldCharacter.Staging.cpp  FieldCharacter.Staging.h  FieldCutscene.Staging.cpp  FieldCutscene.Staging.h  Flag.Staging.cpp  Flag.Staging.h  ForegroundElement.Staging.cpp  ForegroundElement.Staging.h  HeightMap.Staging.cpp  HeightMap.Staging.h  HitBox.Staging.cpp  HitBox.Staging.h  Location.Staging.cpp  Location.Staging.h  Sprite.Staging.cpp  Sprite.Staging.h  (+2 more)
src/CaseCreator/UIComponents/: CutsceneTab.h  MainWindow.cpp  MainWindow.h  ManipulatableGraphicsScene.cpp  ManipulatableGraphicsScene.h  ManipulatableGraphicsView.cpp  ManipulatableGraphicsView.h  ManipulationViewBox.cpp  ManipulationViewBox.h  MouseOverText.cpp  MouseOverText.h  NewProjectDialog.cpp  NewProjectDialog.h
src/CaseCreator/UIComponents/BaseTypes/: MultipleSelectionWidget.cpp  MultipleSelectionWidget.h  ObjectListWidget.cpp  ObjectListWidget.h  Page.h  PageTabWidget.h
src/CaseCreator/UIComponents/CharacterTab/: CharacterDialogSpriteManipulator.cpp  CharacterDialogSpriteManipulator.h  CharacterDialogSpritesPage.cpp  CharacterDialogSpritesPage.h  CharacterFieldSpriteManipulator.h  (+11 more)
src/CaseCreator/Utilities/: ArchiveReader.cpp  ArchiveReader.h  ArchiveWriter.cpp  ArchiveWriter.h  AudioPlayer.cpp  AudioPlayer.h  HtmlDelegate.cpp  HtmlDelegate.h  Interfaces.h  SizeAwareElidingLabel.cpp  SizeAwareElidingLabel.h  Utilities.cpp  Utilities.h
src/CaseInformation/: AnimationManager.cpp  AnimationManager.h  AudioManager.cpp  AudioManager.h  Case.cpp  Case.h  CommonCaseResources.cpp  CommonCaseResources.h  ContentManager.cpp  ContentManager.h  DialogCharacterManager.cpp  DialogCharacterManager.h  DialogCutsceneManager.cpp  DialogCutsceneManager.h  EvidenceManager.cpp  EvidenceManager.h  FieldCharacterManager.cpp  FieldCharacterManager.h  FieldCutsceneManager.cpp  FieldCutsceneManager.h  FlagManager.cpp  FlagManager.h  FontManager.cpp  FontManager.h  PartnerManager.cpp  PartnerManager.h  SpriteManager.cpp  SpriteManager.h
src/Events/: ButtonArrayEventProvider.h  ButtonEventProvider.h  CaseParsingEventProvider.h  DialogEventProvider.h  EventProviders.cpp  EventProviders.h  EvidenceSelectorEventProvider.h  ImageButtonEventProvider.h  LocationEventProvider.h  PromptOverlayEventProvider.h  SelectorEventProvider.h  TextButtonEventProvider.h
src/Screens/: CheckForUpdatesScreen.cpp  CheckForUpdatesScreen.h  GameScreen.cpp  GameScreen.h  LanguageScreen.cpp  LanguageScreen.h  LogoScreen.cpp  LogoScreen.h  MLIScreen.h  OptionsScreen.cpp  OptionsScreen.h  Screen.h  SelectionScreen.cpp  SelectionScreen.h  TitleScreen.cpp  TitleScreen.h
src/UserInterface/: Arrow.cpp  Arrow.h  ButtonArray.cpp  ButtonArray.h  EvidenceDescription.cpp  EvidenceDescription.h  EvidenceSelector.cpp  EvidenceSelector.h  ImageButton.cpp  ImageButton.h  PartnerInformation.cpp  PartnerInformation.h  PromptOverlay.cpp  PromptOverlay.h  Selector.cpp  Selector.h  SkipArrow.cpp  SkipArrow.h  Slider.cpp  Slider.h  Tab.cpp  Tab.h  TextButton.cpp  TextButton.h  TextWidget.cpp  TextWidget.h
src/ticpp/: ticpp.cpp  ticpp.h  ticpprc.h  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlparser.cpp
src/tinyxml2/: tinyxml2.cpp  tinyxml2.h
(+60 files in other folders)
